# cinema

./: All Movies.txt  Colors.txt  Enter Password.py  MOVIES.db  Movies Last Update.txt  Movies.py  README.md  pyproject.toml  requirements.txt  setyp.py
Cinema.egg-info/: PKG-INFO  SOURCES.txt
Subtitles Databases/: 12 Angry Men 1957.db  12 Years A Slave 2013.db  127 Hours 2010.db  13 Sins 2014.db  1408 2007.db  1917 2019.db  2001 A Space Odyssey 1968.db  247F 2011.db  3 Idiots 2009.db  3 Iron 2004.db  3096 Days 2013.db  A Beautiful Mind 2001.db  A Bronx Tale 1993.db  A Clockwork Orange 1971.db  A Day 2017.db  A Dogs Purpose 2017.db  A Lonely Place To Die 2011.db  A Quiet Place 2018.db  A Quiet Place Part Ii 2020.db  A Separation 2011.db  A Street Cat Named Bob 2016.db  A Twelve Year Night 2018.db  A Walk In The Woods 2015.db  About Time 2013.db  Accident Man 2018.db  Adrift 2018.db  Against The Sun 2014.db  All Is Lost 2013.db  Allied 2016.db  Alone In Berlin 2016.db  Anomalisa 2015.db  Another Round 2020.db  Ant Man 2015.db  Anthropoid 2016.db  Apocalypto 2006.db  Army Of Thieves 2021.db  Arrival 2016.db  Ashes In The Snow 2018.db  Assassins Creed 2016.db  At The End Of The Tunnel 2016.db  (+542 more)
